@@ -145,6 +145,20 @@ class ArticleSweeper < ActionController::Caching::Sweeper
         rescue 
           p $!
         end
+
+        begin
+          ppdir = RAILS_ROOT + "/public/notes/d/#{rc.name}/page"
+          ppdir2 = Dir.entries(ppdir)
+          ppdir2.each do |x|
+            if x =~ /(\d+)/
+              expire_page(:controller => 'notes', :action => 'show_category_noteslist', :page => $1, :category => rc.name)
+            end
+          end
+        rescue Errno::ENOENT
+        rescue 
+          p $!
+        end
+
       end
 
       expire_page(:controller => 'notes', :action => 'show_month', :year => record.article_date.year, :month => record.article_date.month)
