@@ -1,3 +1,9 @@
+2006-08-24  ARAKI Yasuhiro  <yasu@debian.or.jp>
+
+	* donrails/app/models/article_sweeper.rb (ArticleSweeper::expire_for): Fix cache sweep for show_category_noteslist.
+
+	* donrails/config/routes.rb: Add routing for show_category_noteslist pagination.
+
 2006-08-23  ARAKI Yasuhiro  <yasu@debian.or.jp>
 
 	* donrails/app/models/comment_mailer.rb (CommentMailer::notify): Fix when ADMIN_MAILADD is not defined. (Thanks \ay.)
